chore: relax image optimization and add cors helpers

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ NEXT_PUBLIC_KIOSK_AUTO_START=true
 
 # Optional background video URL used by the BackgroundWave component
 NEXT_PUBLIC_BACKGROUND_VIDEO_URL=""
+
+# Optional CORS origin for API routes (defaults to *)
+NEXT_PUBLIC_ALLOWED_ORIGIN="*"
