--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "${PORT:-3000}:3000"
+    env_file:
+      - .env
     environment:
       NODE_ENV: production
     restart: unless-stopped
